attempted to fixed contrast

--- a/project-code/css/home.css
+++ b/project-code/css/home.css
@@ -128,11 +128,10 @@
     position: relative;
     border-radius: 5%;
   }
+  .material-icons {
+    color:#777764;
+}
 
-/*.card .card-reveal{
-    padding: 0px;
-    height: 100%;
-}*/
 .card .card-image {
     border-radius: 5% 5% 0px 0px;
 }
@@ -150,6 +149,7 @@
 .card .card-content {
     padding: 5%;
 }
+
 .card .card-content .card-title {
     color:#4f4747 !important;
 }
@@ -159,9 +159,14 @@
     text-transform: lowercase;
 }
 .card-content > p > a{
-    color: #cbcbc1;
+    font-size: 18px;
+    font-family: dm-italic;
+    color: #777764;
 }
 
+.card-content > p > a:hover{
+    background-color: gray;
+}
 .carousel .carousel-item {
     background-color: #777764 !important;
 }
@@ -183,30 +188,30 @@
 .left-icon {
 left: 30px; /* Adjust left positioning as needed */
 z-index: 3;
+color: white;
 }
 
 .right-icon {
 right: 30px; /* Adjust right positioning as needed */
+color: aliceblue;
 }
-.material-icons {
-    color:#ebebde;
-}
+
 .carousel-item > h2{
     font-family: dm-bold;
     font-size: 20px;
     text-transform: uppercase;
-    color:#ebebde;
+    color: white;
 }
 .carousel-item > h3{
     font-family: dm-medium;
     font-size: 16px;
     text-transform: uppercase;
-    color:#ebebde;
+    color:white;
 }
 .carousel.carousel-slider .carousel-item p{
     font-family: dm-reg;
     font-size: 14px;
-    color:#ebebde;
+    color:white;
 }
 .special-list{
     display: flex;
@@ -217,7 +222,7 @@ right: 30px; /* Adjust right positioning as needed */
 .carousel-item > ul{
     font-family: dm-reg;
     font-size: 12px;
-    color:#ebebde;
+    color:white;
     text-align: center;
 }
 .title-semicolon {
